# otameshi

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  IOCSV.cpp  IOCSV.h  IOCSVMatrix.cpp  IOCSVMatrix.h  differentiate.cpp  extract.cpp  integrate.cpp  make_plot.cpp  make_plot.h  multiply.cpp  nmf.cpp  nmf.h  nmf3.cpp  root.cpp  square.cpp  svd.cpp  svd.h  transpose.cpp  transpose.h
