FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

list(APPEND bins "svd")
list(APPEND bins "differentiate")
list(APPEND bins "extract")
list(APPEND bins "integrate")
list(APPEND bins "make_plot")
list(APPEND bins "multiply")
list(APPEND bins "nmf")
list(APPEND bins "nmf2")
list(APPEND bins "nmf3")
list(APPEND bins "root")
list(APPEND bins "square")
list(APPEND bins "transpose")

list(APPEND srcs ${PROJECT_SOURCE_DIR}/${SRC_DIR}/IOCSV.cpp)
list(APPEND srcs ${PROJECT_SOURCE_DIR}/${SRC_DIR}/IOCSVMatrix.cpp)
FOREACH(bin ${bins})
	list(APPEND srcs ${PROJECT_SOURCE_DIR}/${SRC_DIR}/${bin}.cpp)
	add_executable(${bin} ${srcs})
	TARGET_LINK_LIBRARIES(${bin} ${Boost_LIBRARIES} )
	set_target_properties(${bin} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
	list(REMOVE_ITEM srcs ${PROJECT_SOURCE_DIR}/${SRC_DIR}/${bin}.cpp)
ENDFOREACH(bin)

